<resources>
    <string name="app_name">Asignment</string>
    <string name="course">Course</string>
    <string name="fullName">Full Name</string>
    <string name="userName">User Name</string>
    <string name="dob">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="testQ1">1)How many types of business transactions are there in accounting?</string>
    <string name="testQ2">2)Which of these is not included as a separate item in the basic accounting equation?</string>
    <string name="testQ3">3)The account format that displays debits, credits, balances, and headings.</string>
    <string name="testQ4">4) Asset accounts have what type of balance?</string>
    <string name="testQ5">    5)Which account increases equity?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello</string>
    <string name="accountingTitle">Accounting</string>
    <string name="accountingDescription">Accounting is the process of recording financial transactions pertaining to a business. The accounting process includes summarizing, analyzing, and reporting these transactions to oversight agencies, regulators, and tax collection entities.</string>
    <string name="hintStatus">Whst is in your mind?</string>
    <string name="article">Article</string>
</resources>
